# citation-agent

./: .gitignore  README.md  pyproject.toml
examples/: sample_article.txt
src/citation_agent/: __init__.py  __main__.py  analyzer.py  cli.py  llm_matcher.py  llm_reviewer.py  models.py  source_finder.py
tests/: test_analyzer.py  test_llm_matcher.py  test_llm_reviewer.py  test_source_finder.py
