[project]
name = "citation-agent"
version = "0.1.0"
description = "Detect sentences in an article that likely need citations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
citation-agent = "citation_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
